# chat-game

./: .env  .env.example  .env.sample  .gitignore  README.md  docker-compose-local.yml  docker-compose.yml  init-letsencrypt.sh  mailu.env  package-lock.json  package.json  setup.sh
.github/workflows/: ci-cd.yml
agent/: .env  .env.example  Dockerfile  agent.py  create_persona.py  pyproject.toml  requirements.txt
agent/avatars/: cow.imx
backend/: .dockerignore  .gitignore  Dockerfile  manage.py  pyproject.prev.toml  pyproject.toml
backend/core/: admin.py  models.py  serializers.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_remove_child_user_child_conversation_prompt_and_more.py  0002_report.py
backend/lle_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/speech/: urls.py  views.py
backend/speech/migrations/: 0001_initial.py
certbot/conf/: options-ssl-nginx.conf  ssl-dhparams.pem
certs/: nginx.crt  nginx.key
frontend/: Dockerfile  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/services/: api.ts  children.ts  sessions.ts
frontend/src/: App.tsx
learn-play-world/: package-lock.json  package.json
lle-fix/: .env.example  Dockerfile  README.md  main.py  pyproject.prev.toml  requirements.txt
lle-fix/core/: admin.py  models.py
lle-fix/curriculum/: genai_service.py  models.py  serializers.py  tasks.py  urls.py  views.py
lle-fix/lle_backend/: celery.py  settings.py  urls.py
lle-fix/speech/: models.py  serializers.py  urls.py  views.py
nginx/conf.d/: default.conf  default.conf.main  default.conf.temp
src/lib/: i18n.ts
src/locales/: en.json  fa.json
(+63 files in other folders)
