[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio-throttle>=1.0.2",
    "livekit-agents[cartesia,elevenlabs,openai,silero,tavus,turn-detector]>=1.2.1",
    "livekit-plugins-elevenlabs>=1.2.1",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "livekit-plugins-openai>=1.2.1",
    "livekit-plugins-silero>=1.2.1",
    "livekit-plugins-tavus>=1.2.1",
    "loguru>=0.7.3",
    "numpy>=2.3.1",
    "python-dotenv>=1.1.1",
    "soundfile>=0.13.1",
]
